@@ -74,9 +74,8 @@ The latest stable version of hydrogen is available at <a target="new" href="http
 
 You can download precompiled packages for the following Linux distributions and systems:
 <ul>
-	<li>Slackware </li>
+	<li>Debian </li>
 	<li>Ubuntu</li>
-	<li>Mac OS X</li>
 </ul>
 
 Ensure your host meets the following system requirements:
@@ -93,8 +92,8 @@ Ensure your host meets the following system requirements:
 </ul>
 
 Install Hydrogen according to your distribution's package instructions, then execute:
-<pre>$ hydrogengui</pre>
-Or run <tt>hydrogengui --help</tt> for usage options:
+<pre>$ hydrogen</pre>
+Or run <tt>hydrogen --help</tt> for usage options:
 <pre>
 Usage: hydrogen [-v] [-h] -s file
    -d, --driver AUDIODRIVER - Use the selected audio driver (jack, alsa, oss, portaudio)
@@ -546,7 +545,7 @@ The playlist editor is useful if you want Hydrogen to play different songs autom
 </div>
 
 <h2 class="subchapter" id="support">Support and troubleshooting</h2>
-* Where do I find help? Forum, mailing-lists, <a target="new" href="http://hydrogen-music.org/devel/wiki">TRAC</a>?<br />
+* Where do I find help? Forum, mailing-lists, <a target="new" href="http://trac.assembla.com/hydrogen/wiki">TRAC</a>?<br />
 * If you like Hydrogen contribute, donate, send us your sister, etc. etc.
 
 </body>
